[package]
name = "byte-engine-resource-management"
version = "0.1.0"
edition = "2021"
authors = ["Facundo Villa <facundovilla961@gmail.com>"]
description = "Asset, resource, shader, and storage management for Byte-Engine."
license = "MIT"
repository = "https://github.com/Game-Tek/Byte-Engine"
homepage = "https://github.com/Game-Tek/Byte-Engine"
documentation = "https://docs.rs/byte-engine-resource-management"
readme = "../../README.md"
keywords = ["byte-engine", "assets", "resources", "shaders"]
categories = ["game-development", "rendering"]
rust-version.workspace = true
build = "build.rs"

[lib]
name = "resource_management"

[build-dependencies]
md5 = "0.8.0"

[dependencies]
utils = { package = "byte-engine-utils", path = "../utils", version = "0.1.0" }
besl = { package = "byte-engine-besl", path = "../besl", version = "0.1.0" }

png = "0.18.0"
exr = "1.74.2"
rkyv = { version = "0.8.15", features = ["unaligned"] }
md5 = "0.8.0"
redb = "4.1.0"
intel_tex_2 = "0.5.0"
gltf = { version = "1.4.1" }
base64 = "0.13.1"
urlencoding = "2.1.3"
ufbx = "0.11.2"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
libdeflater = "1.23.1"
meshopt = "0.6.2"
serde = "1.0.219"
serde_json = "1.0.140"
json5 = "1.3.1"
log = "0.4.26"
downcast-rs = "2.0.1"
maths-rs = "1.0.0"

gxhash = "3.5.0"
colored = "3.0.0"
vorbis_rs = "0.5.5"
compio = { version = "0.19.1", features = ["fs", "io", "macros"] }
memmap2 = "0.9.5"

[target.'cfg(target_os = "linux")'.dependencies]
shaderc = "0.10.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Direct3D_Dxc"] }
