[package]
name = "utils"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version.workspace = true

[dependencies]
futures = { version = "0.3.31", features = ["alloc"], default-features = false }
parking_lot = "0.12.3"
gxhash = "3.5.0"
sonic-rs = "0.5.1"
smallbox = { version = "0.8", features = ["coerce"] }
