[package]
name = "byte-engine-besl-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
besl = { package = "byte-engine-besl", path = ".." }
libfuzzer-sys = "0.4"

# Keep fuzz-only dependencies and profiles outside the engine workspace.
[workspace]
members = ["."]

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false
bench = false
